testing/framework/resources/Advanced/Failing/mondrian/checked/query6300.e
USA	CA	Richmond	8762	Heysel Stratton	Heysel Stratton	F	S	Bachelors Degree	$50K - $70K
USA	CA	San Carlos	8648	Mary Welch	Mary Welch	F	S	Graduate Degree	$110K - $130K
